[project]
name = "relea"
version = "0.1.0"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "torcheval>=0.0.7",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
default = true
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-cuda" } ]
torchvision = [ { index = "pytorch-cuda" } ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "jupyterlab",
    "ruff",
]
